--- a/index.html
+++ b/index.html
@@ -33,10 +33,32 @@
     </header>
 
     <main>
+        <section class="painel">
+            <h2>
+                Aqui o café é só o começo.
+            </h2>
+        </section>
+        
+        <section class="secao-com-texto" id="quem-somos">
+            <header>
+                <img src="./src/images/logo-secoes.png" alt="folha de café">
+
+                <h2>Quem somos</h2>
+            </header>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum velit a magni numquam ab! Reprehenderit eligendi, voluptate dicta dignissimos qui totam asperiores quisquam. Dolorem necessitatibus quas quaerat ullam, tempora possimus!</p>
+        </section>
+
         <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
+
+        <section class="secao-com-texto onde-estamos" id="onde-estamos">
+            <header>
+                <img src="./src/images/logo-secoes.png" alt="folha de café">
+
+                <h2>Onde Estamos</h2>
+            </header>
+            <p>Avenida Brigadeiro Faria Lima, 444 São Paulo</p>
+        </section>
+        </section>
     </main>
 
     <footer>
